--- a/gameover.html
+++ b/gameover.html
@@ -3,6 +3,6 @@
     <title>Home</title>
   </head>
   <body onclick='window.location.href="sample.html"'>
-    <img src="title.PNG" alt = "Title">
+    <img src="gameover.PNG" alt = "Title">
   </body>
 </html>
