--- a/victory.html
+++ b/victory.html
@@ -1,8 +1,8 @@
 <html>
   <head>
-    <title>Home</title>
+    <title>Victory</title>
   </head>
   <body onclick='window.location.href="sample.html"'>
-    <img src="title.PNG" alt = "Title">
+    <img src="victory.PNG" alt = "Title">
   </body>
 </html>
