--- a/sample.html
+++ b/sample.html
@@ -161,7 +161,7 @@
     function drawLevel() {
         ctx.font = "16px Courier New";
         ctx.fillStyle = "#FFFFFF";
-        ctx.fillText("Level "+localStorage.getItem("health"), canvas.width/2-30, 20);
+        ctx.fillText("Level "+localStorage.getItem("level"), canvas.width/2-30, 20);
     }
 
     function draw() {
